<resources>
    <string name="app_name">SplashScreen</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="splashscreenapp">SplashScreenApp</string>
    <string name="login">Login</string>
    <string name="string_register">Register</string>
</resources>